--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <th style="background-color: transparent; box-shadow: none;"></th>
         <th class="header-konnen">können<br><small>could</small></th>
         <th class="header-wollen">wollen<br><small>would want</small></th>
-        <th class="header-sollen">sollen<br><small>should (subj.)</small></th>
+        <th class="header-sollen">sollen<br><small>should</small></th>
         <th class="header-mogenmochten">mögen / möchten<br><small>would like</small></th>
         <th class="header-mussen">müssen<br><small>would have to</small></th>
         <th class="header-durfen">dürfen<br><small>would be allowed</small></th>
