--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     .label-ich { background-color: #e57373; }
     .label-du { background-color: #eb9870; }
-    .label-erseies { background-color: #f4ba65; }
+    .label-ersiees { background-color: #f4ba65; }
     .label-wir { background-color: #f6c770; }
     .label-ihr { background-color: #f7d47a; }
     .label-sie { background-color: #f4e187; }
@@ -97,7 +97,7 @@
         <td class="td-durfen">dürftest</td>
       </tr>
       <tr>
-        <td class="row-label label-erseies">er/sie/es</td>
+        <td class="row-label label-ersiees">er / sie / es</td>
         <td class="td-konnen">könnte</td>
         <td class="td-wollen">wollte</td>
         <td class="td-sollen">sollte</td>
@@ -124,7 +124,7 @@
         <td class="td-durfen">dürftet</td>
       </tr>
       <tr>
-        <td class="row-label label-sie">sie/Sie</td>
+        <td class="row-label label-sie">sie / Sie</td>
         <td class="td-konnen">könnten</td>
         <td class="td-wollen">wollten</td>
         <td class="td-sollen">sollten</td>
